@@ -1182,6 +1182,11 @@ static BOOL addingKBEntry;
         }
 }
 
+- (void)windowDidResignKey:(NSNotification *)notification
+{
+	if ([NSFontPanel sharedFontPanelExists]) [[NSFontPanel sharedFontPanel] close];
+}
+
 @end
 
 @implementation iTermProfileWindowController (Private)
